--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.82",
     "firebase": "^10.13.1",
+    "framer-motion": "^12.23.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "postprocessing": "^6.37.3",
@@ -22,6 +23,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.12",
     "three": "^0.167.1"
