--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.13.1",
     "framer-motion": "^12.23.6",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.1",
     "match-sorter": "^6.3.4",
     "postprocessing": "^6.37.3",
     "react": "^18.3.1",
