--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "match-sorter": "^6.3.4",
     "postprocessing": "^6.37.3",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.26.1",
     "react-type-animation": "^3.2.0",
     "sort-by": "^1.2.0",
